update to git master goliath / import sinatra code

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,9 +1,9 @@
 !!!
 %html
   %head
-    %title Swiss Life Secure Data Exchange
+    %title Secure Data Exchange
   %body
-    %h1 Swiss Life Secure Data Exchange
+    %h1 Secure Data Exchange
     - if @data["direction"]=="download"
       Inform user where he can upload the files
       %a{:href=>"/sdx/email?id=#{@id}"} Upload E-Mail
